# recentry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  development-packages.yml
crates/recentry-core/: Cargo.toml
crates/recentry-core/src/: lib.rs  model.rs  opener.rs  ranking.rs  vscode.rs
crates/recentry-core/tests/: core_contract.rs
crates/recentry-host/: Cargo.toml
crates/recentry-host/src/: config.rs  lib.rs  main.rs  platform.rs  runtime.rs  ui_process.rs  unix_main.rs  xdg_autostart.rs
crates/recentry-ipc/: Cargo.toml
crates/recentry-ipc/src/: lib.rs
crates/recentry-protocol/: Cargo.toml
crates/recentry-protocol/src/: lib.rs
crates/recentry-ui/: Cargo.toml
crates/recentry-ui/src/: lib.rs  main.rs
docs/: architecture.md  cross-platform-implementation-plan.md  cross-platform-v1-spec.md  implementation-plan.md  platform-support.md  release-and-rollback.md  troubleshooting.md
docs/adr/: 0001-ui-technology-gate.md  0002-direct-win32-ui.md  0003-cross-platform-package-tooling.md
docs/performance/: 2026-07-21-direct-win32-ui-gate.md  2026-07-21-linux-native-ui-gate.md  2026-07-21-macos-appkit-ui-gate.md  2026-07-21-production-windows-acceptance.md  2026-07-21-shared-host-regression.md
packaging/linux/: recentry.desktop
packaging/macos/: Info.plist
packaging/windows/: installer.nsi
tools/: package-linux.sh  package-macos.sh  package-manifest.sh  package-windows.ps1  test-linux-package.sh  test-macos-package.sh  test-windows-package.ps1
