[package]
name = "recentry-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "recentry-ui"
path = "src/main.rs"

[dependencies]
recentry-core = { path = "../recentry-core" }
recentry-ipc = { path = "../recentry-ipc" }
recentry-protocol = { path = "../recentry-protocol" }
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_System_Registry",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
